<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7.5"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/start1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:layout_marginLeft="@dimen/leftMargin"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/start1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/end1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/end1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/start2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/start2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/start3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/start3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/start4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftMargin"

            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/start4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:text="@string/start5"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/start5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            />
    </TableRow>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:background="#1a000000">
        <TextView
            android:id="@+id/tillEndTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tillEnd"
            android:layout_marginLeft="@dimen/leftMargin"
            android:gravity="start"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tillEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/rightMargin"
            android:gravity="end"
            android:textSize="30sp"
            android:textColor="@color/black" />
    </RelativeLayout>

</TableLayout>
